samples/_failures_safe/1761142169_e252b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_495d7ef3.c: In function ‘main’:
./samples/SAFE/__tmp_495d7ef3.c:192:5: error: expected declaration or statement at end of input
  192 |     }
      |     ^
